# GnomeGrubFixer

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
Debug/: Makefile  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  sniper_grubmanager
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: Makefile.am  Makefile.in  main.c~  sniper_grubmanager.ui
